lab5/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_or_empty
Rule 2     instructions_or_empty -> <empty>
Rule 3     instructions_or_empty -> instructions
Rule 4     instructions -> instruction
Rule 5     instructions -> instructions instruction
Rule 6     instruction -> { instructions }
Rule 7     instruction -> BREAK ;
Rule 8     instruction -> CONTINUE ;
Rule 9     instruction -> print_i ;
Rule 10    instruction -> assign ;
Rule 11    instruction -> while_l
Rule 12    instruction -> for_l
Rule 13    instruction -> return_i ;
Rule 14    instruction -> if_i
Rule 15    if_i -> IF ( expr ) instruction ELSE error
Rule 16    if_i -> IF ( expr ) error ELSE instruction  [precedence=right, level=2]
Rule 17    if_i -> IF ( expr ) error  [precedence=right, level=1]
Rule 18    if_i -> IF ( error ) instruction ELSE instruction  [precedence=right, level=2]
Rule 19    if_i -> IF ( error ) instruction  [precedence=right, level=1]
Rule 20    if_i -> IF ( expr ) instruction ELSE instruction  [precedence=right, level=2]
Rule 21    if_i -> IF ( expr ) instruction  [precedence=right, level=1]
Rule 22    while_l -> WHILE ( expr ) error
Rule 23    while_l -> WHILE ( error ) instruction
Rule 24    while_l -> WHILE ( expr ) instruction
Rule 25    for_l -> FOR ID = expr : expr error
Rule 26    for_l -> FOR ID = expr : error instruction
Rule 27    for_l -> FOR ID = error : expr instruction
Rule 28    for_l -> FOR ID = expr : expr instruction
Rule 29    return_i -> RETURN error
Rule 30    return_i -> RETURN expr
Rule 31    return_i -> RETURN
Rule 32    print_i -> PRINT error
Rule 33    print_i -> PRINT printargs
Rule 34    printargs -> expr
Rule 35    printargs -> expr , printargs
Rule 36    expr -> mat_fun ( error )
Rule 37    expr -> mat_fun ( mat_fun_args )
Rule 38    expr -> vector
Rule 39    expr -> expr DOTMINUS expr  [precedence=left, level=7]
Rule 40    expr -> expr DOTPLUS expr  [precedence=left, level=7]
Rule 41    expr -> expr DOTDIVIDE expr  [precedence=left, level=8]
Rule 42    expr -> expr DOTMULTIPLY expr  [precedence=left, level=8]
Rule 43    expr -> expr OR expr  [precedence=left, level=3]
Rule 44    expr -> expr AND expr  [precedence=left, level=3]
Rule 45    expr -> expr XOR expr  [precedence=left, level=3]
Rule 46    expr -> expr GTE expr  [precedence=nonassoc, level=9]
Rule 47    expr -> expr LTE expr  [precedence=nonassoc, level=9]
Rule 48    expr -> expr GT expr  [precedence=nonassoc, level=9]
Rule 49    expr -> expr LT expr  [precedence=nonassoc, level=9]
Rule 50    expr -> expr NEQ expr  [precedence=nonassoc, level=9]
Rule 51    expr -> expr EQ expr  [precedence=nonassoc, level=9]
Rule 52    expr -> expr / expr  [precedence=left, level=6]
Rule 53    expr -> expr * expr  [precedence=left, level=6]
Rule 54    expr -> expr - expr  [precedence=left, level=5]
Rule 55    expr -> expr + expr  [precedence=left, level=5]
Rule 56    expr -> unary
Rule 57    expr -> ( expr )
Rule 58    expr -> var
Rule 59    expr -> FLOATNUM
Rule 60    expr -> INTNUM
Rule 61    expr -> STRING
Rule 62    var -> ID
Rule 63    var -> matel
Rule 64    matel -> ID [ mat_ref_args ]
Rule 65    mat_ref_args -> expr : expr
Rule 66    mat_ref_args -> mat_ref_args , expr : expr
Rule 67    mat_ref_args -> expr
Rule 68    mat_ref_args -> mat_ref_args , expr
Rule 69    assign -> var DIVIDEASSIGN error
Rule 70    assign -> var MULTIPLYASSIGN error
Rule 71    assign -> var MINUSASSIGN error
Rule 72    assign -> var PLUSASSIGN error
Rule 73    assign -> var = error
Rule 74    assign -> var DIVIDEASSIGN expr  [precedence=right, level=4]
Rule 75    assign -> var MULTIPLYASSIGN expr  [precedence=right, level=4]
Rule 76    assign -> var MINUSASSIGN expr  [precedence=right, level=4]
Rule 77    assign -> var PLUSASSIGN expr  [precedence=right, level=4]
Rule 78    assign -> var = expr  [precedence=right, level=4]
Rule 79    unary -> expr '  [precedence=left, level=10]
Rule 80    unary -> NOT expr  [precedence=right, level=11]
Rule 81    unary -> - expr  [precedence=right, level=11]
Rule 82    vector -> [ variables ]
Rule 83    variables -> expr
Rule 84    variables -> variables , expr
Rule 85    mat_fun_args -> expr
Rule 86    mat_fun_args -> mat_fun_args , expr
Rule 87    mat_fun -> ONES
Rule 88    mat_fun -> EYE
Rule 89    mat_fun -> ZEROS

Terminals, with rules where they appear:

'                    : 79
(                    : 15 16 17 18 19 20 21 22 23 24 36 37 57
)                    : 15 16 17 18 19 20 21 22 23 24 36 37 57
*                    : 53
+                    : 55
,                    : 35 66 68 84 86
-                    : 54 81
/                    : 52
:                    : 25 26 27 28 65 66
;                    : 7 8 9 10 13
=                    : 25 26 27 28 73 78
AND                  : 44
BREAK                : 7
CONTINUE             : 8
DIVIDEASSIGN         : 69 74
DOTDIVIDE            : 41
DOTMINUS             : 39
DOTMULTIPLY          : 42
DOTPLUS              : 40
ELSE                 : 15 16 18 20
EQ                   : 51
EYE                  : 88
FLOATNUM             : 59
FOR                  : 25 26 27 28
GT                   : 48
GTE                  : 46
ID                   : 25 26 27 28 62 64
IF                   : 15 16 17 18 19 20 21
INTNUM               : 60
LT                   : 49
LTE                  : 47
MINUSASSIGN          : 71 76
MULTIPLYASSIGN       : 70 75
NEQ                  : 50
NOT                  : 80
ONES                 : 87
OR                   : 43
PLUSASSIGN           : 72 77
PRINT                : 32 33
RETURN               : 29 30 31
STRING               : 61
WHILE                : 22 23 24
XOR                  : 45
ZEROS                : 89
[                    : 64 82
]                    : 64 82
error                : 15 16 17 18 19 22 23 25 26 27 29 32 36 69 70 71 72 73
{                    : 6
}                    : 6

Nonterminals, with rules where they appear:

assign               : 10
expr                 : 15 16 17 20 21 22 24 25 25 26 27 28 28 30 34 35 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 57 65 65 66 66 67 68 74 75 76 77 78 79 80 81 83 84 85 86
for_l                : 12
if_i                 : 14
instruction          : 4 5 15 16 18 18 19 20 20 21 23 24 26 27 28
instructions         : 3 5 6
instructions_or_empty : 1
mat_fun              : 36 37
mat_fun_args         : 37 86
mat_ref_args         : 64 66 68
matel                : 63
print_i              : 9
printargs            : 33 35
program              : 0
return_i             : 13
unary                : 56
var                  : 58 69 70 71 72 73 74 75 76 77 78
variables            : 82 84
vector               : 38
while_l              : 11


state 0

    (0) S' -> . program
    (1) program -> . instructions_or_empty
    (2) instructions_or_empty -> .
    (3) instructions_or_empty -> . instructions
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . BREAK ;
    (8) instruction -> . CONTINUE ;
    (9) instruction -> . print_i ;
    (10) instruction -> . assign ;
    (11) instruction -> . while_l
    (12) instruction -> . for_l
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (32) print_i -> . PRINT error
    (33) print_i -> . PRINT printargs
    (69) assign -> . var DIVIDEASSIGN error
    (70) assign -> . var MULTIPLYASSIGN error
    (71) assign -> . var MINUSASSIGN error
    (72) assign -> . var PLUSASSIGN error
    (73) assign -> . var = error
    (74) assign -> . var DIVIDEASSIGN expr
    (75) assign -> . var MULTIPLYASSIGN expr
    (76) assign -> . var MINUSASSIGN expr
    (77) assign -> . var PLUSASSIGN expr
    (78) assign -> . var = expr
    (22) while_l -> . WHILE ( expr ) error
    (23) while_l -> . WHILE ( error ) instruction
    (24) while_l -> . WHILE ( expr ) instruction
    (25) for_l -> . FOR ID = expr : expr error
    (26) for_l -> . FOR ID = expr : error instruction
    (27) for_l -> . FOR ID = error : expr instruction
    (28) for_l -> . FOR ID = expr : expr instruction
    (29) return_i -> . RETURN error
    (30) return_i -> . RETURN expr
    (31) return_i -> . RETURN
    (15) if_i -> . IF ( expr ) instruction ELSE error
    (16) if_i -> . IF ( expr ) error ELSE instruction
    (17) if_i -> . IF ( expr ) error
    (18) if_i -> . IF ( error ) instruction ELSE instruction
    (19) if_i -> . IF ( error ) instruction
    (20) if_i -> . IF ( expr ) instruction ELSE instruction
    (21) if_i -> . IF ( expr ) instruction
    (62) var -> . ID
    (63) var -> . matel
    (64) matel -> . ID [ mat_ref_args ]
    $end            reduce using rule 2 (instructions_or_empty -> .)
    {               shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    program                        shift and go to state 1
    instructions_or_empty          shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    print_i                        shift and go to state 8
    assign                         shift and go to state 9
    while_l                        shift and go to state 10
    for_l                          shift and go to state 11
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    matel                          shift and go to state 21

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_or_empty .
    $end            reduce using rule 1 (program -> instructions_or_empty .)


state 3

    (3) instructions_or_empty -> instructions .
    (5) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . BREAK ;
    (8) instruction -> . CONTINUE ;
    (9) instruction -> . print_i ;
    (10) instruction -> . assign ;
    (11) instruction -> . while_l
    (12) instruction -> . for_l
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (32) print_i -> . PRINT error
    (33) print_i -> . PRINT printargs
    (69) assign -> . var DIVIDEASSIGN error
    (70) assign -> . var MULTIPLYASSIGN error
    (71) assign -> . var MINUSASSIGN error
    (72) assign -> . var PLUSASSIGN error
    (73) assign -> . var = error
    (74) assign -> . var DIVIDEASSIGN expr
    (75) assign -> . var MULTIPLYASSIGN expr
    (76) assign -> . var MINUSASSIGN expr
    (77) assign -> . var PLUSASSIGN expr
    (78) assign -> . var = expr
    (22) while_l -> . WHILE ( expr ) error
    (23) while_l -> . WHILE ( error ) instruction
    (24) while_l -> . WHILE ( expr ) instruction
    (25) for_l -> . FOR ID = expr : expr error
    (26) for_l -> . FOR ID = expr : error instruction
    (27) for_l -> . FOR ID = error : expr instruction
    (28) for_l -> . FOR ID = expr : expr instruction
    (29) return_i -> . RETURN error
    (30) return_i -> . RETURN expr
    (31) return_i -> . RETURN
    (15) if_i -> . IF ( expr ) instruction ELSE error
    (16) if_i -> . IF ( expr ) error ELSE instruction
    (17) if_i -> . IF ( expr ) error
    (18) if_i -> . IF ( error ) instruction ELSE instruction
    (19) if_i -> . IF ( error ) instruction
    (20) if_i -> . IF ( expr ) instruction ELSE instruction
    (21) if_i -> . IF ( expr ) instruction
    (62) var -> . ID
    (63) var -> . matel
    (64) matel -> . ID [ mat_ref_args ]
    $end            reduce using rule 3 (instructions_or_empty -> instructions .)
    {               shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    instruction                    shift and go to state 22
    print_i                        shift and go to state 8
    assign                         shift and go to state 9
    while_l                        shift and go to state 10
    for_l                          shift and go to state 11
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    matel                          shift and go to state 21

state 4

    (4) instructions -> instruction .
    {               reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    WHILE           reduce using rule 4 (instructions -> instruction .)
    FOR             reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 5

    (6) instruction -> { . instructions }
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . BREAK ;
    (8) instruction -> . CONTINUE ;
    (9) instruction -> . print_i ;
    (10) instruction -> . assign ;
    (11) instruction -> . while_l
    (12) instruction -> . for_l
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (32) print_i -> . PRINT error
    (33) print_i -> . PRINT printargs
    (69) assign -> . var DIVIDEASSIGN error
    (70) assign -> . var MULTIPLYASSIGN error
    (71) assign -> . var MINUSASSIGN error
    (72) assign -> . var PLUSASSIGN error
    (73) assign -> . var = error
    (74) assign -> . var DIVIDEASSIGN expr
    (75) assign -> . var MULTIPLYASSIGN expr
    (76) assign -> . var MINUSASSIGN expr
    (77) assign -> . var PLUSASSIGN expr
    (78) assign -> . var = expr
    (22) while_l -> . WHILE ( expr ) error
    (23) while_l -> . WHILE ( error ) instruction
    (24) while_l -> . WHILE ( expr ) instruction
    (25) for_l -> . FOR ID = expr : expr error
    (26) for_l -> . FOR ID = expr : error instruction
    (27) for_l -> . FOR ID = error : expr instruction
    (28) for_l -> . FOR ID = expr : expr instruction
    (29) return_i -> . RETURN error
    (30) return_i -> . RETURN expr
    (31) return_i -> . RETURN
    (15) if_i -> . IF ( expr ) instruction ELSE error
    (16) if_i -> . IF ( expr ) error ELSE instruction
    (17) if_i -> . IF ( expr ) error
    (18) if_i -> . IF ( error ) instruction ELSE instruction
    (19) if_i -> . IF ( error ) instruction
    (20) if_i -> . IF ( expr ) instruction ELSE instruction
    (21) if_i -> . IF ( expr ) instruction
    (62) var -> . ID
    (63) var -> . matel
    (64) matel -> . ID [ mat_ref_args ]
    {               shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    instructions                   shift and go to state 23
    instruction                    shift and go to state 4
    print_i                        shift and go to state 8
    assign                         shift and go to state 9
    while_l                        shift and go to state 10
    for_l                          shift and go to state 11
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    matel                          shift and go to state 21

state 6

    (7) instruction -> BREAK . ;
    ;               shift and go to state 24


state 7

    (8) instruction -> CONTINUE . ;
    ;               shift and go to state 25


state 8

    (9) instruction -> print_i . ;
    ;               shift and go to state 26


state 9

    (10) instruction -> assign . ;
    ;               shift and go to state 27


state 10

    (11) instruction -> while_l .
    {               reduce using rule 11 (instruction -> while_l .)
    BREAK           reduce using rule 11 (instruction -> while_l .)
    CONTINUE        reduce using rule 11 (instruction -> while_l .)
    PRINT           reduce using rule 11 (instruction -> while_l .)
    WHILE           reduce using rule 11 (instruction -> while_l .)
    FOR             reduce using rule 11 (instruction -> while_l .)
    RETURN          reduce using rule 11 (instruction -> while_l .)
    IF              reduce using rule 11 (instruction -> while_l .)
    ID              reduce using rule 11 (instruction -> while_l .)
    $end            reduce using rule 11 (instruction -> while_l .)
    }               reduce using rule 11 (instruction -> while_l .)
    ELSE            reduce using rule 11 (instruction -> while_l .)


state 11

    (12) instruction -> for_l .
    {               reduce using rule 12 (instruction -> for_l .)
    BREAK           reduce using rule 12 (instruction -> for_l .)
    CONTINUE        reduce using rule 12 (instruction -> for_l .)
    PRINT           reduce using rule 12 (instruction -> for_l .)
    WHILE           reduce using rule 12 (instruction -> for_l .)
    FOR             reduce using rule 12 (instruction -> for_l .)
    RETURN          reduce using rule 12 (instruction -> for_l .)
    IF              reduce using rule 12 (instruction -> for_l .)
    ID              reduce using rule 12 (instruction -> for_l .)
    $end            reduce using rule 12 (instruction -> for_l .)
    }               reduce using rule 12 (instruction -> for_l .)
    ELSE            reduce using rule 12 (instruction -> for_l .)


state 12

    (13) instruction -> return_i . ;
    ;               shift and go to state 28


state 13

    (14) instruction -> if_i .
    {               reduce using rule 14 (instruction -> if_i .)
    BREAK           reduce using rule 14 (instruction -> if_i .)
    CONTINUE        reduce using rule 14 (instruction -> if_i .)
    PRINT           reduce using rule 14 (instruction -> if_i .)
    WHILE           reduce using rule 14 (instruction -> if_i .)
    FOR             reduce using rule 14 (instruction -> if_i .)
    RETURN          reduce using rule 14 (instruction -> if_i .)
    IF              reduce using rule 14 (instruction -> if_i .)
    ID              reduce using rule 14 (instruction -> if_i .)
    $end            reduce using rule 14 (instruction -> if_i .)
    }               reduce using rule 14 (instruction -> if_i .)
    ELSE            reduce using rule 14 (instruction -> if_i .)


state 14

    (32) print_i -> PRINT . error
    (33) print_i -> PRINT . printargs
    (34) printargs -> . expr
    (35) printargs -> . expr , printargs
    (36) expr -> . mat_fun ( error )
    (37) expr -> . mat_fun ( mat_fun_args )
    (38) expr -> . vector
    (39) expr -> . expr DOTMINUS expr
    (40) expr -> . expr DOTPLUS expr
    (41) expr -> . expr DOTDIVIDE expr
    (42) expr -> . expr DOTMULTIPLY expr
    (43) expr -> . expr OR expr
    (44) expr -> . expr AND expr
    (45) expr -> . expr XOR expr
    (46) expr -> . expr GTE expr
    (47) expr -> . expr LTE expr
    (48) expr -> . expr GT expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr / expr
    (53) expr -> . expr * expr
    (54) expr -> . expr - expr
    (55) expr -> . expr + expr
    (56) expr -> . unary
    (57) expr -> . ( expr )
    (58) expr -> . var
    (59) expr -> . FLOATNUM
    (60) expr -> . INTNUM
    (61) expr -> . STRING
    (87) mat_fun -> . ONES
    (88) mat_fun -> . EYE
    (89) mat_fun -> . ZEROS
    (82) vector -> . [ variables ]
    (79) unary -> . expr '
    (80) unary -> . NOT expr
    (81) unary -> . - expr
    (62) var -> . ID
    (63) var -> . matel
    (64) matel -> . ID [ mat_ref_args ]
    error           shift and go to state 29
    (               shift and go to state 33
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    STRING          shift and go to state 40
    ONES            shift and go to state 41
    EYE             shift and go to state 42
    ZEROS           shift and go to state 43
    [               shift and go to state 44
    NOT             shift and go to state 45
    -               shift and go to state 35
    ID              shift and go to state 18

    printargs                      shift and go to state 30
    expr                           shift and go to state 31
    mat_fun                        shift and go to state 32
    vector                         shift and go to state 34
    unary                          shift and go to state 36
    var                            shift and go to state 37
    matel                          shift and go to state 21

state 15

    (69) assign -> var . DIVIDEASSIGN error
    (70) assign -> var . MULTIPLYASSIGN error
    (71) assign -> var . MINUSASSIGN error
    (72) assign -> var . PLUSASSIGN error
    (73) assign -> var . = error
    (74) assign -> var . DIVIDEASSIGN expr
    (75) assign -> var . MULTIPLYASSIGN expr
    (76) assign -> var . MINUSASSIGN expr
    (77) assign -> var . PLUSASSIGN expr
    (78) assign -> var . = expr
    DIVIDEASSIGN    shift and go to state 46
    MULTIPLYASSIGN  shift and go to state 47
    MINUSASSIGN     shift and go to state 48
    PLUSASSIGN      shift and go to state 49
    =               shift and go to state 50


state 16

    (22) while_l -> WHILE . ( expr ) error
    (23) while_l -> WHILE . ( error ) instruction
    (24) while_l -> WHILE . ( expr ) instruction
    (               shift and go to state 51


state 17

    (25) for_l -> FOR . ID = expr : expr error
    (26) for_l -> FOR . ID = expr : error instruction
    (27) for_l -> FOR . ID = error : expr instruction
    (28) for_l -> FOR . ID = expr : expr instruction
    ID              shift and go to state 52


state 18

    (62) var -> ID .
    (64) matel -> ID . [ mat_ref_args ]
    DIVIDEASSIGN    reduce using rule 62 (var -> ID .)
    MULTIPLYASSIGN  reduce using rule 62 (var -> ID .)
    MINUSASSIGN     reduce using rule 62 (var -> ID .)
    PLUSASSIGN      reduce using rule 62 (var -> ID .)
    =               reduce using rule 62 (var -> ID .)
    ,               reduce using rule 62 (var -> ID .)
    DOTMINUS        reduce using rule 62 (var -> ID .)
    DOTPLUS         reduce using rule 62 (var -> ID .)
    DOTDIVIDE       reduce using rule 62 (var -> ID .)
    DOTMULTIPLY     reduce using rule 62 (var -> ID .)
    OR              reduce using rule 62 (var -> ID .)
    AND             reduce using rule 62 (var -> ID .)
    XOR             reduce using rule 62 (var -> ID .)
    GTE             reduce using rule 62 (var -> ID .)
    LTE             reduce using rule 62 (var -> ID .)
    GT              reduce using rule 62 (var -> ID .)
    LT              reduce using rule 62 (var -> ID .)
    NEQ             reduce using rule 62 (var -> ID .)
    EQ              reduce using rule 62 (var -> ID .)
    /               reduce using rule 62 (var -> ID .)
    *               reduce using rule 62 (var -> ID .)
    -               reduce using rule 62 (var -> ID .)
    +               reduce using rule 62 (var -> ID .)
    '               reduce using rule 62 (var -> ID .)
    ;               reduce using rule 62 (var -> ID .)
    )               reduce using rule 62 (var -> ID .)
    ]               reduce using rule 62 (var -> ID .)
    :               reduce using rule 62 (var -> ID .)
    error           reduce using rule 62 (var -> ID .)
    {               reduce using rule 62 (var -> ID .)
    BREAK           reduce using rule 62 (var -> ID .)
    CONTINUE        reduce using rule 62 (var -> ID .)
    PRINT           reduce using rule 62 (var -> ID .)
    WHILE           reduce using rule 62 (var -> ID .)
    FOR             reduce using rule 62 (var -> ID .)
    RETURN          reduce using rule 62 (var -> ID .)
    IF              reduce using rule 62 (var -> ID .)
    ID              reduce using rule 62 (var -> ID .)
    [               shift and go to state 53


state 19

    (29) return_i -> RETURN . error
    (30) return_i -> RETURN . expr
    (31) return_i -> RETURN .
    (36) expr -> . mat_fun ( error )
    (37) expr -> . mat_fun ( mat_fun_args )
    (38) expr -> . vector
    (39) expr -> . expr DOTMINUS expr
    (40) expr -> . expr DOTPLUS expr
    (41) expr -> . expr DOTDIVIDE expr
    (42) expr -> . expr DOTMULTIPLY expr
    (43) expr -> . expr OR expr
    (44) expr -> . expr AND expr
    (45) expr -> . expr XOR expr
    (46) expr -> . expr GTE expr
    (47) expr -> . expr LTE expr
    (48) expr -> . expr GT expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr / expr
    (53) expr -> . expr * expr
    (54) expr -> . expr - expr
    (55) expr -> . expr + expr
    (56) expr -> . unary
    (57) expr -> . ( expr )
    (58) expr -> . var
    (59) expr -> . FLOATNUM
    (60) expr -> . INTNUM
    (61) expr -> . STRING
    (87) mat_fun -> . ONES
    (88) mat_fun -> . EYE
    (89) mat_fun -> . ZEROS
    (82) vector -> . [ variables ]
    (79) unary -> . expr '
    (80) unary -> . NOT expr
    (81) unary -> . - expr
    (62) var -> . ID
    (63) var -> . matel
    (64) matel -> . ID [ mat_ref_args ]
    error           shift and go to state 54
    ;               reduce using rule 31 (return_i -> RETURN .)
    (               shift and go to state 33
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    STRING          shift and go to state 40
    ONES            shift and go to state 41
    EYE             shift and go to state 42
    ZEROS           shift and go to state 43
    [               shift and go to state 44
    NOT             shift and go to state 45
    -               shift and go to state 35
    ID              shift and go to state 18

    expr                           shift and go to state 55
    mat_fun                        shift and go to state 32
    vector                         shift and go to state 34
    unary                          shift and go to state 36
    var                            shift and go to state 37
    matel                          shift and go to state 21

state 20

    (15) if_i -> IF . ( expr ) instruction ELSE error
    (16) if_i -> IF . ( expr ) error ELSE instruction
    (17) if_i -> IF . ( expr ) error
    (18) if_i -> IF . ( error ) instruction ELSE instruction
    (19) if_i -> IF . ( error ) instruction
    (20) if_i -> IF . ( expr ) instruction ELSE instruction
    (21) if_i -> IF . ( expr ) instruction
    (               shift and go to state 56


state 21

    (63) var -> matel .
    DIVIDEASSIGN    reduce using rule 63 (var -> matel .)
    MULTIPLYASSIGN  reduce using rule 63 (var -> matel .)
    MINUSASSIGN     reduce using rule 63 (var -> matel .)
    PLUSASSIGN      reduce using rule 63 (var -> matel .)
    =               reduce using rule 63 (var -> matel .)
    ,               reduce using rule 63 (var -> matel .)
    DOTMINUS        reduce using rule 63 (var -> matel .)
    DOTPLUS         reduce using rule 63 (var -> matel .)
    DOTDIVIDE       reduce using rule 63 (var -> matel .)
    DOTMULTIPLY     reduce using rule 63 (var -> matel .)
    OR              reduce using rule 63 (var -> matel .)
    AND             reduce using rule 63 (var -> matel .)
    XOR             reduce using rule 63 (var -> matel .)
    GTE             reduce using rule 63 (var -> matel .)
    LTE             reduce using rule 63 (var -> matel .)
    GT              reduce using rule 63 (var -> matel .)
    LT              reduce using rule 63 (var -> matel .)
    NEQ             reduce using rule 63 (var -> matel .)
    EQ              reduce using rule 63 (var -> matel .)
    /               reduce using rule 63 (var -> matel .)
    *               reduce using rule 63 (var -> matel .)
    -               reduce using rule 63 (var -> matel .)
    +               reduce using rule 63 (var -> matel .)
    '               reduce using rule 63 (var -> matel .)
    ;               reduce using rule 63 (var -> matel .)
    )               reduce using rule 63 (var -> matel .)
    ]               reduce using rule 63 (var -> matel .)
    :               reduce using rule 63 (var -> matel .)
    error           reduce using rule 63 (var -> matel .)
    {               reduce using rule 63 (var -> matel .)
    BREAK           reduce using rule 63 (var -> matel .)
    CONTINUE        reduce using rule 63 (var -> matel .)
    PRINT           reduce using rule 63 (var -> matel .)
    WHILE           reduce using rule 63 (var -> matel .)
    FOR             reduce using rule 63 (var -> matel .)
    RETURN          reduce using rule 63 (var -> matel .)
    IF              reduce using rule 63 (var -> matel .)
    ID              reduce using rule 63 (var -> matel .)


state 22

    (5) instructions -> instructions instruction .
    {               reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    IF              reduce using rule 5 (instructions -> instructions instruction .)
    ID              reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)


state 23

    (6) instruction -> { instructions . }
    (5) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . BREAK ;
    (8) instruction -> . CONTINUE ;
    (9) instruction -> . print_i ;
    (10) instruction -> . assign ;
    (11) instruction -> . while_l
    (12) instruction -> . for_l
    (13) instruction -> . return_i ;
    (14) instruction -> . if_i
    (32) print_i -> . PRINT error
    (33) print_i -> . PRINT printargs
    (69) assign -> . var DIVIDEASSIGN error
    (70) assign -> . var MULTIPLYASSIGN error
    (71) assign -> . var MINUSASSIGN error
    (72) assign -> . var PLUSASSIGN error
    (73) assign -> . var = error
    (74) assign -> . var DIVIDEASSIGN expr
    (75) assign -> . var MULTIPLYASSIGN expr
    (76) assign -> . var MINUSASSIGN expr
    (77) assign -> . var PLUSASSIGN expr
    (78) assign -> . var = expr
    (22) while_l -> . WHILE ( expr ) error
    (23) while_l -> . WHILE ( error ) instruction
    (24) while_l -> . WHILE ( expr ) instruction
    (25) for_l -> . FOR ID = expr : expr error
    (26) for_l -> . FOR ID = expr : error instruction
    (27) for_l -> . FOR ID = error : expr instruction
    (28) for_l -> . FOR ID = expr : expr instruction
    (29) return_i -> . RETURN error
    (30) return_i -> . RETURN expr
    (31) return_i -> . RETURN
    (15) if_i -> . IF ( expr ) instruction ELSE error
    (16) if_i -> . IF ( expr ) error ELSE instruction
    (17) if_i -> . IF ( expr ) error
    (18) if_i -> . IF ( error ) instruction ELSE instruction
    (19) if_i -> . IF ( error ) instruction
    (20) if_i -> . IF ( expr ) instruction ELSE instruction
    (21) if_i -> . IF ( expr ) instruction
    (62) var -> . ID
    (63) var -> . matel
    (64) matel -> . ID [ mat_ref_args ]
    }               shift and go to state 57
    {               shift and go to state 5
    BREAK           shift and go to state 6
    CONTINUE        shift and go to state 7
    PRINT           shift and go to state 14
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    ID              shift and go to state 18

    instruction                    shift and go to state 22
    print_i                        shift and go to state 8
    assign                         shift and go to state 9
    while_l                        shift and go to state 10
    for_l                          shift and go to state 11
    return_i                       shift and go to state 12
    if_i                           shift and go to state 13
    var                            shift and go to state 15
    matel                          shift and go to state 21

state 24

    (7) instruction -> BREAK ; .
    {               reduce using rule 7 (instruction -> BREAK ; .)
    BREAK           reduce using rule 7 (instruction -> BREAK ; .)
    CONTINUE        reduce using rule 7 (instruction -> BREAK ; .)
    PRINT           reduce using rule 7 (instruction -> BREAK ; .)
    WHILE           reduce using rule 7 (instruction -> BREAK ; .)
    FOR             reduce using rule 7 (instruction -> BREAK ; .)
    RETURN          reduce using rule 7 (instruction -> BREAK ; .)
    IF              reduce using rule 7 (instruction -> BREAK ; .)
    ID              reduce using rule 7 (instruction -> BREAK ; .)
    $end            reduce using rule 7 (instruction -> BREAK ; .)
    }               reduce using rule 7 (instruction -> BREAK ; .)
    ELSE            reduce using rule 7 (instruction -> BREAK ; .)


state 25
